# Multicore_ParallelRayTracing

./: CMakeLists.txt  README.md
cpu_openMP/: CMakeLists.txt
cpu_openMP/src/: aabb.h  aarect.h  bvh.h  constants.h  hittable.h  main.cpp  operation.h  perlin.h  ray.h  sphere.h  vec3.h
gpu_cuda/: CMakeLists.txt
gpu_cuda/src/: aabb.cuh  bvh.cuh  camera.cuh  hittable.cuh  main.cu  material.cuh  moving_sphere.cuh  ray.cuh  rtweekend.cuh  texture.cuh
src/: box.h  camera.h  constant_medium.h  constants.h  hittable.h  hittable_list.h  main.cpp  material.h  moving_sphere.h  sphere.h  texture.h  vec3.h
